--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="{% static 'plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css' %}">    <!-- Theme style -->
     <link rel="stylesheet" href="{% static 'dist/css/adminlte.min.css' %}">
     <link href="{% static 'js/flatpickr/flatpickr.min.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'js/flatpickr/dark.css' %}" rel="stylesheet" type="text/css"/>
 
 <script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
 <script src="{% static 'js/htmx.min.js' %}" defer></script>
