--- a/exam/templates/exam/senarai-partial.html
+++ b/exam/templates/exam/senarai-partial.html
@@ -1,15 +1,13 @@
 
         <div class="card-body">
-            <h5 class="card-title">Senarai BCS
-                
-                <span class="pull-right">
-
-        <button class="btn btn-outline-primary btn-sm rounded" hx-get=""
+<div class="card-header">
+            <h1 class="card-title">Senarai Pemeriksaan</h1>
+                <div class="card-tools">
+        <button class="btn btn-outline-success btn-sm rounded float-right" hx-get=""
                 hx-target="#body-content" hx-push-url="true"><i class="fas fa-plus"></i>Tambah</button>
-                            <a id="excel" href=""
-           class="btn btn-outline-success rounded btn-sm"><i class="fas fa-file-excel"></i>Export</a>
-      </span></h5>
-      <div class="card-subtitle mt-5">
+      </div>
+</div>
+    <div class="card-subtitle mt-5">
       <input id="carian-filter" class="carian-filter form-control" type="search"
       name="carian" placeholder="Carian.." hx-get="." hx-trigger="keyup changed delay:500ms"
       hx-target="#table-item" hx-select="#table-item" hx-swap="outerHTML" hx-push-url="true" hx-indicator=".htmx-indicator"></input>
@@ -19,39 +17,29 @@
                     <thead>
                     <tr>
                         <th scope="col">Tarikh</th>
-                        <th scope="col">No BCS</th>
                         <th scope="col">MRN</th>
+                        <th scope="col">NRIC</th>
                         <th scope="col">Nama</th>
-                        <th scope="col">Wad</th>
-                        <th scope="col">Exam</th>
-                        <th scope="col" class="text-center">Merge</th>
+                        <th scope="col">Rujukan</th>
+                        <th scope="col">Pemohon</th>
+                        <th scope="col" class="text-center">Status</th>
                         <th scope="col"></th>
                     </tr>
                     </thead>
                     <tbody>
                     {% for item in page_obj %}
                         <tr id="item-{{ item.id }}">
-                            <td>{{ item.bcs.tarikh|date:'d/m/Y g:i A' }}</td>
-                            <td>{{ item.nobcs }}</td>
-                            <td>{% if item.bcs.mrn %}{{ item.bcs.mrn }}{% else %}{{ item.bcs.nric }} {% endif %}</td>
-                            <td>{{ item.bcs.nama }}</td>
-                            <td>{{ item.bcs.ward }}</td>
-                            <td>{{ item.laterality|default:"" }} {{ item.exam }}</td>
-                            <td class="text-center align-middle">
-                                <span class="align-middle kt-switch kt-switch--icon kt-switch--sm kt-switch--success bootstrap-s"
-                                      tabindex="0" data-toggle='tooltip' data-placement='top' title='Merge di PACS'>
-                            <label class="mt-3">
-                                <input id="merged" type="checkbox" {% if item.merged %}checked{% endif %}
-                                       name="merged" hx-post="{% url 'bcs:bcs-merge' item.pk %}" hx-swap="outerHTML"
-                                       hx-target="this" />
-                                <span></span>
-                            </label>
-                        </span>
-                            </td>
+                            <td>{{ item.tarikh|date:'d/m/Y g:i A' }}</td>
+                            <td>{{ item.pesakit.mrn|default:'' }}</td>
+                            <td>{{ item.pesakit.nric|default:'' }}</td>
+                            <td>{{ item.pesakit.nama }}</td>
+                            <td>{{ item.rujukan }}</td>
+                            <td>{{ item.pemohon }}</td>
+                            <td class="text-center align-middle">{{ item.status }}</td>
                             <td>
                                 <div class="btn-group align-middle" role="group" aria-label="Detail Exam">
                                     <button class="btn btn-icon btn-sm rounded btn-outline-hover-info"
-                                            hx-get="{% url 'bcs:bcs-edit' item.bcs.pk %}" hx-target="#bcs-full"
+                                            hx-get="" hx-target="#bcs-full"
                                             hx-swap="outerHTML" hx-push-url="true"><i class="fa fa-edit text-danger"
                                                                                       aria-hidden="true"></i>
                                     </button>
@@ -116,10 +104,6 @@
             </div>
         </div>
 
-
-        <div class="modal fade" tabindex="-1" id="modal-exam">
-            <div id="exam-dialog" class="modal-dialog modal-dialog-scrollable"></div>
-        </div>
 
 
         {% block scripts %}
