--- a/exam/templates/exam/senarai.html
+++ b/exam/templates/exam/senarai.html
@@ -37,15 +37,16 @@
                                    name="bcs__tarikh_before"></input>
                         </div>
                         <div class="form-group col-sm-6 col-md-3  p-3">
-                            <label for="merge-filter">Merge</label>
+                            <label for="merge-filter">Status</label>
                             <select id="merge-filter" class="form-control apifilter" id="merge" name="merged">
                                 <option></option>
-                                <option value="True">Merged</option>
-                                <option value="False">Belum Merge</option>
+                                <option value="True">Registered</option>
+                                <option value="False">Performed</option>
+                                <option value="False">Completed</option>
                             </select>
                         </div>
                         <div class="form-group col-sm-6 col-md-3 w-100 p-3">
-                            <label for="modaliti-filter">Modaliti</label>
+                            <label for="modaliti-filter">Rujukan</label>
                             <select id="modaliti-filter" class="modaliti apifilter form-control"
                                     name="exam__modaliti"></select>
                         </div>
