--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,9 @@
         .select2 {
             width: 100% !important;
         }
+.card-header {
+	border-bottom: 1px solid rgba(211, 203, 203, 0.6) !important;
+}
     </style>
 </head>
 <body class="hold-transition text-sm dark-mode sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed" hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
