tukar bcs - pesakit

--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,9 @@
         <!-- Main content -->
         <section class="content">
             <div id="konten" class="container-fluid">
+            <div class="body-content">
                 {% block content %}{% endblock %}
+            </div>
             </div><!--/. container-fluid -->
         </section>
         <!-- /.content -->
