--- a/exam/templates/exam/senarai.html
+++ b/exam/templates/exam/senarai.html
@@ -1,5 +1,5 @@
 {% extends 'index.html' %}
-{% block title %}Business Continuity Service{% endblock %}
+{% block title %}Senarai Pemeriksaan{% endblock %}
 
 {% load crispy_forms_tags %}
 {% block style %}
