--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!-- Brand Logo -->
-<a href="index3.html" class="brand-link">
+<a href="/" class="brand-link">
     <img src="{% static 'dist/img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
          style="opacity: .8">
     <span class="brand-text font-weight-light">Reez 1.0</span>
@@ -34,7 +34,7 @@
     <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <li class="nav-item">
-                <a href="#" class="nav-link active">
+                <a href="/" class="nav-link active">
                     <i class="nav-icon fas fa-tachometer-alt"></i>
                     <p>
                         Dashboard
