--- a/exam/templates/exam/bcs_tambah.html
+++ b/exam/templates/exam/bcs_tambah.html
@@ -1,11 +1,12 @@
 {% extends 'index.html' %}
+{% load static %}
 {% block title %}{{ tajuk }}{% endblock %}
 {% block breadcrumbs %}
     <a href="{% url 'bcs:bcs-list' %}"
-       class="kt-subheader__breadcrumbs-link">Business Continuity Service</a>
+       class="kt-subheader__breadcrumbs-link">{{ tajuk }}</a>
 {% endblock breadcrumbs %}
 {% block breadcrumbs2 %}
-{{ tajuk}}
+    {{ tajuk }}
 {% endblock breadcrumbs2 %}
 {% load crispy_forms_tags %}
 {% block style %}
@@ -17,7 +18,9 @@
     {% include 'exam/bcs_tambah-partia.html' %}
 {% endblock content %}
 {% block scripts %}
+    <script src="{% static 'js/dayjs.min.js' %}"></script>
     <script>
+
         document.body.addEventListener("htmxSuccess", function (e) {
             console.log('success')
             toastr.success(e.detail.value);
@@ -26,9 +29,55 @@
             console.log('ada msg')
             toastr.success(e.detail.merged);
         });
-        document.body.addEventListener("pesakitada", function(e){
+        document.body.addEventListener("pesakitada", function (e) {
             $('#id_nama').val(e.detail.nama);
             $('#id_nric').val(e.detail.nric);
+            $("input[name=jantina][value=" + e.detail.jantina + "]").prop("checked", true);
+            $("input[name=bangsa][value=" + e.detail.bangsa + "]").prop("checked", true);
+
         });
+        $("#id_nric").on("change", function () {
+            let bangsa = $("input[name=bangsa]").val();
+            let ic = $(this).val();
+            if (bangsa !== 'Warga Asing') {
+                if (ic % 2 == 0) { // awek
+                    $("input[name=jantina][value='P']").prop("checked", true);
+                } else {
+                    $("input[name=jantina][value='L']").prop("checked", true);
+                }
+                let dob_t = ic.substr(0, 2);
+                let dob_b = ic.substr(2, 2);
+                let dob_d = ic.substr(4, 2);
+                console.log('bukan foreigner')
+                let now = new Date().getFullYear().toString();
+                let decade = now.substr(0, 2);
+                if (now.substr(2, 2) > dob_t) {
+                    dob_t = parseInt(decade.concat(dob_t.toString()), 10);
+                }
+                let lahir = new Date(dob_t, (dob_b - 1), dob_d, 0, 0, 0, 0);
+                let umur_t = dayjs().diff(lahir, 'year')
+                let umur_b = dayjs().diff(lahir, 'month')
+                let umur_h = dayjs().diff(lahir, 'day')
+                let umur = ''
+
+                if (umur_t<100){
+                    console.log(umur_t)
+                    if (parseInt(umur_t)===0){
+                    umur = umur_b+' bulan '
+                    }else {
+                        umur=umur_t+' tahun '+umur_b+' bulan'
+                    }
+                } else {
+                    lahir = dayjs(lahir).add(100, 'year');
+                    umur_b = dayjs().diff(lahir, 'month')
+                    umur_h = dayjs().diff(lahir, 'day')
+                    umur = umur_b+' bulan '+umur_h+' hari'
+                    if (umur_b<1){
+                        umur = umur_h+' hari';
+                    }
+                }
+                $('#id_umur').val(umur);
+            }
+        })
     </script>
 {% endblock scripts %}
