--- a/exam/templates/exam/senarai-partial.html
+++ b/exam/templates/exam/senarai-partial.html
@@ -3,7 +3,7 @@
 <div class="card-header">
             <h1 class="card-title">Senarai Pemeriksaan</h1>
                 <div class="card-tools">
-        <button class="btn btn-outline-success btn-sm rounded float-right" hx-get=""
+        <button class="btn btn-outline-success btn-sm rounded float-right" hx-get="{% url 'bcs:bcs-tambah' %}"
                 hx-target="#body-content" hx-push-url="true"><i class="fas fa-plus"></i>Tambah</button>
       </div>
 </div>
