--- a/exam/templates/exam/bcs-list-item.html
+++ b/exam/templates/exam/bcs-list-item.html
@@ -1,21 +1,10 @@
 <tr id="item-{{ item.id }}">
     <td>{{ item.bcs.tarikh|date:'d/m/Y g:i A' }}</td>
-    <td>{{ item.nobcs }}</td>
+    <td>{{ item.no_xray }}</td>
     <td>{% if item.bcs.mrn %}{{ item.bcs.mrn }}{% else %}{{ item.bcs.nric }} {% endif %}</td>
     <td>{{ item.bcs.nama }}</td>
     <td>{{ item.bcs.ward }}</td>
     <td>{{ item.exam.modaliti.singkatan }} {{ item.laterality|default:"" }} {{ item.exam }}</td>
-    <td class="text-center align-middle">
-                                <span class="align-middle kt-switch kt-switch--outline kt-switch--icon kt-switch--sm kt-switch--success"
-                                      tabindex="0" data-toggle='tooltip' data-placement='top' title='Merge di PACS'>
-                            <label class="mt-3">
-                                <input id="merged" type="checkbox" {% if item.merged %}checked{% endif %}
-                                       name="merged" hx-post="{% url 'bcs:bcs-merge' item.pk %}" hx-swap="outerHTML"
-                                       hx-target="this" />
-                                <span></span>
-                            </label>
-                        </span>
-    </td>
     <td>
         <div class="btn-group align-middle" role="group" aria-label="Detail Exam">
             <button class="btn btn-icon btn-sm rounded btn-hover-dark"
