--- a/exam/templates/exam/bcs_item-partial.html
+++ b/exam/templates/exam/bcs_item-partial.html
@@ -1,32 +1,18 @@
 <table id="exam" class="table">
     <thead>
     <tr>
-        <th scope="col">No. BCS</th>
+        <th scope="col">No. X-Ray</th>
         <th scope="col">Pemeriksaan</th>
         <th scope="col">Lateraliti</th>
-        <th scope="col" class="text-center">Merged</th>
-        <th scope="col">Catatan</th>
         <th scope="col"></th>
     </tr>
     </thead>
     <tbody>
     {% for item in exams %}
         <tr  id="item-{{ item.id }}">
-            <th scope="row">{{ item.nobcs }}</th>
+            <th scope="row">{{ item.no_xray }}</th>
             <td>{{ item.exam }}</td>
             <td>{{ item.laterality|default:"" }}</td>
-            <td class="text-center align-middle">
-                                <span class="align-middle kt-switch kt-switch--outline kt-switch--icon kt-switch--sm kt-switch--success"
-                                      tabindex="0" data-toggle='tooltip' data-placement='top' title='Merge di PACS'>
-                            <label class="mt-3">
-                                <input id="merged" type="checkbox" {% if item.merged %}checked{% endif %}
-                                       name="merged" hx-post="{% url 'bcs:bcs-merge' item.pk %}" hx-swap="outerHTML"
-                                       hx-target="this" />
-                                <span></span>
-                            </label>
-                        </span>
-            </td>
-            <td>{{ item.dcatatan|default:"" }}</td>
             <td class="text-center">
                 <button id="edit-{{ item.id }}" class="btn btn-icon btn-sm rounded btn-hover-dark"
                         hx-get="{% url 'bcs:exam-edit' item.pk %}" hx-target="closest tr" hx-swap="outerHTML"
