--- a/exam/templates/exam/bcs_tambah-partia.html
+++ b/exam/templates/exam/bcs_tambah-partia.html
@@ -29,7 +29,7 @@
                     <table id="exam" class="table">
                         <thead>
                         <tr>
-                            <th scope="col">No. BCS</th>
+                            <th scope="col">No. X-Ray</th>
                             <th scope="col">Pemeriksaan</th>
                             <th scope="col">Lateraliti</th>
                             <th scope="col"></th>
@@ -38,21 +38,9 @@
                         <tbody>
                         {% for item in exams %}
                             <tr>
-                                <th scope="row">{{ item.nobcs }}</th>
+                                <th scope="row">{{ item.no_xray }}</th>
                                 <td>{{ item.exam }}</td>
                                 <td>{{ item.laterality|default:"" }}</td>
-                                <td class="text-center align-middle">
-                                <span class="align-middle kt-switch kt-switch--outline kt-switch--icon kt-switch--sm kt-switch--success"
-                                      tabindex="0" data-toggle='tooltip' data-placement='top' title='Merge di PACS'>
-                            <label class="mt-3">
-                                <input id="merged" type="checkbox" {% if item.merged %}checked{% endif %}
-                                       name="merged" hx-post="{% url 'bcs:bcs-merge' item.pk %}" hx-swap="outerHTML"
-                                       hx-target="this"/>
-                                <span></span>
-                            </label>
-                        </span>
-                                </td>
-                                <td>{{ item.dcatatan|default:"" }}</td>
                                 <td class="text-center">
                                     <button id="edit-{{ item.id }}" class="btn btn-icon btn-sm rounded btn-hover-dark"
                                             hx-get="{% url 'bcs:exam-edit' item.pk %}" hx-target="closest tr"
@@ -91,11 +79,11 @@
             {% if not bcs_id %}
                 <div id="tmpthantar" class="card">
                     <div class="card-body">
-                                                    <a class="btn btn-danger btn-sm rounded"
+                            <a class="btn btn-danger btn-sm rounded"
                                href="{% url 'bcs:bcs-list' %}">Kembali</a>
                         <div class="float-right">
                             <button type="submit" onclick="$('.editing').remove()" hx-post="{{ hantar_url }}"
-                                    hx-include=".form-control" hx-target="#bcs" hx-swap="outerHTML"
+                                    hx-include=".form-group" hx-target="#bcs" hx-swap="outerHTML"
                                     class="btn btn-primary btn-sm rounded">Hantar
                             </button>
 
@@ -108,3 +96,59 @@
     </form>
 
 </div>
+    <script src="{% static 'js/dayjs.min.js' %}"></script>
+<script>
+            document.body.addEventListener("pesakitada", function (e) {
+            $('#id_nama').val(e.detail.nama);
+            $('#id_nric').val(e.detail.nric);
+            $("input[name=jantina][value=" + e.detail.jantina + "]").prop("checked", true);
+            $("input[name=bangsa][value=" + e.detail.bangsa + "]").prop("checked", true);
+        });
+        $("#id_nric").on("change", function () {
+            let bangsa = $("input[name=bangsa]").val();
+            let ic = $(this).val();
+            if (bangsa !== 'Warga Asing') {
+                if (ic % 2 == 0) { // awek
+                    $("input[name=jantina][value='P']").prop("checked", true);
+                } else {
+                    $("input[name=jantina][value='L']").prop("checked", true);
+                }
+                console.log('bukan warga asing, kita kira ic')
+                kiraic(ic);
+            }
+        })
+        function kiraic(ic){
+              let dob_t = ic.substr(0, 2);
+                let dob_b = ic.substr(2, 2);
+                let dob_d = ic.substr(4, 2);
+                console.log('bukan foreigner')
+                let now = new Date().getFullYear().toString();
+                let decade = now.substr(0, 2);
+                if (now.substr(2, 2) > dob_t) {
+                    dob_t = parseInt(decade.concat(dob_t.toString()), 10);
+                }
+                let lahir = new Date(dob_t, (dob_b - 1), dob_d, 0, 0, 0, 0);
+                let umur_t = dayjs().diff(lahir, 'year')
+                let umur_b = dayjs().diff(lahir, 'month')
+                let umur_h = dayjs().diff(lahir, 'day')
+                let umur = ''
+
+                if (umur_t<100){
+                    console.log(umur_t)
+                    if (parseInt(umur_t)===0){
+                    umur = umur_b;
+                    }else {
+                        umur=umur_t+' tahun'
+                    }
+                } else {
+                    lahir = dayjs(lahir).add(100, 'year');
+                    umur_b = dayjs().diff(lahir, 'month')
+                    umur_h = dayjs().diff(lahir, 'day')
+                    umur = umur_b+' bulan '+umur_h+' hari'
+                    if (umur_b<1){
+                        umur = umur_h+' hari';
+                    }
+                }
+                $('#id_umur').val(umur);
+        }
+</script>
