--- a/exam/templates/exam/bcs_tambah-partia.html
+++ b/exam/templates/exam/bcs_tambah-partia.html
@@ -32,6 +32,8 @@
                             <th scope="col">No. X-Ray</th>
                             <th scope="col">Pemeriksaan</th>
                             <th scope="col">Lateraliti</th>
+                            <th scope="col">kVp</th>
+                            <th scope="col">mAs</th>
                             <th scope="col"></th>
                         </tr>
                         </thead>
@@ -41,6 +43,8 @@
                                 <th scope="row">{{ item.no_xray }}</th>
                                 <td>{{ item.exam }}</td>
                                 <td>{{ item.laterality|default:"" }}</td>
+                                <td>{{ item.kv|default:"" }}</td>
+                                <td>{{ item.mas|default:"" }}</td>
                                 <td class="text-center">
                                     <button id="edit-{{ item.id }}" class="btn btn-icon btn-sm rounded btn-hover-dark"
                                             hx-get="{% url 'bcs:exam-edit' item.pk %}" hx-target="closest tr"
