--- a/exam/templates/exam/senarai.html
+++ b/exam/templates/exam/senarai.html
@@ -29,26 +29,26 @@
                         <div class="form-group col-sm-6 col-md-3 p-3">
                             <label for="dari-filter">Dari</label>
                             <input id="dari-filter" class="tarikh-filter apifilter form-control"
-                                   name="bcs__tarikh_after"></input>
+                                   name="tarikh_after"></input>
                         </div>
                         <div class="form-group col-sm-6 col-md-3  p-3">
                             <label for="hingga-filter">Hingga</label>
                             <input id="hingga-filter" class="tarikh-filter apifilter form-control"
-                                   name="bcs__tarikh_before"></input>
+                                   name="tarikh_before"></input>
                         </div>
                         <div class="form-group col-sm-6 col-md-3  p-3">
                             <label for="merge-filter">Status</label>
-                            <select id="merge-filter" class="form-control apifilter" id="merge" name="merged">
+                            <select id="merge-filter" class="form-control apifilter" id="merge" name="status">
                                 <option></option>
-                                <option value="True">Registered</option>
-                                <option value="False">Performed</option>
-                                <option value="False">Completed</option>
+                                <option value="Registered">Registered</option>
+                                <option value="Performed">Performed</option>
+                                <option value="Completed">Completed</option>
                             </select>
                         </div>
                         <div class="form-group col-sm-6 col-md-3 w-100 p-3">
                             <label for="modaliti-filter">Rujukan</label>
                             <select id="modaliti-filter" class="modaliti apifilter form-control"
-                                    name="exam__modaliti"></select>
+                                    name="rujukan"></select>
                         </div>
 
                     </div>
