--- a/templates/index.html
+++ b/templates/index.html
@@ -53,11 +53,11 @@
       hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
 <div class="wrapper">
 
-    <!-- Preloader -->
-    <div class="preloader flex-column justify-content-center align-items-center">
-        <img class="animation__wobble" src="{% static 'dist/img/AdminLTELogo.png' %}" alt="AdminLTELogo" height="60"
-             width="60">
-    </div>
+{#    <!-- Preloader -->#}
+{#    <div class="preloader flex-column justify-content-center align-items-center">#}
+{#        <img class="animation__wobble" src="{% static 'dist/img/AdminLTELogo.png' %}" alt="AdminLTELogo" height="60"#}
+{#             width="60">#}
+{#    </div>#}
 
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-dark">
