--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -43,7 +43,7 @@
             </li>
             <li class="nav-header">DATA</li>
             <li class="nav-item">
-                <a href="pages/calendar.html" class="nav-link">
+                <a href="{% url 'bcs:bcs-list' %}" class="nav-link">
                     <i class="nav-icon fas fa-radiation-alt text-yellow"></i>
                     <p>
                         Pemeriksaan
@@ -52,7 +52,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="pages/calendar.html" class="nav-link">
+                <a href="#" class="nav-link">
                     <i class="nav-icon fas fa-wheelchair text-pink"></i>
                     <p>
                         Pesakit
